2003-04-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (get_file): add warning in an error case.

2003-04-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c (send_file): remove two unused variables.
	(parse_send_line): remove unused variable.
	(main): remove tthree unused variables.
	(global): remove unused variable.

	* dccserver.c (get_file): show time taken by transfer and transfer
	rate.
	(converse_with_client): remove unused variable.
	(handle_input): remove unused variable.
	(create_and_bind_socket): fix format string.

2003-04-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c: allow listening on multiple ports.
	(main): fix -v error message.

	* dccserver.mdoc: document that listening on multiple ports works
	now.
	* dccserver.man: regen.

	* dccserver.c (main): do chroot after option parsing, should be
	early enough and avoid an error message in case of -h or -v.

2003-04-07  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.mdoc: document "quit".
	* dccserver.man: regen.

	* NEWS:	0.3 RELEASED

	* configure.ac: Bump to 0.3.

	* Makefile.am, configure.ac: add and install dccsend man pages.

	* dccsend.mdoc: add man page for dccsend.
	* dccsend.man: generate.

	* dccsend.c (main): fix -v output.

	* dccserver.c (main): fix -v output.

	* dccsend.c (usage): fix usage.
	(main): change default nickname to "dccsend".

	* dccserver.mdoc: add -e to SYNOPSIS.
	* dccserver.man: regen.

2003-04-05  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (get_file): For consistency, don't insist on O_EXCL
	when creating new files. Noted by Rudolf Polzer.

	* dccserver.mdoc: remove a paragraph from BUGS that's no longer
	true. Noted by Rudolf Polzer.
	* dccserver.man: regen.

	* dccsend.c (send_file): fix fseek return value check.

	* dccserver.c (get_file): don't append to file, but seek to offset
	to avoid problems with two or more writers to the same file.
	Idea from Rudolf Polzer.
